[package]
name = "lang-id"
version = "0.0.1"
edition = "2024"
license = "MIT/Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
categories = ["internationalization", "localization"]
readme = "Readme.md"
repository = "https://github.com/2moe/lang-id"
description = "Const lang-ids and maps are provided, mainly for i18n and l10n."
exclude = ["/rust-toolchain.toml"]

[features]
default = ["sys-locale", "match"]
# default = ["sys-lang", "match", "map"]
#
# alloc = []
# std = ["alloc", "compact_str?/std"]
std = []
map = ["dep:phf", "dep:tinystr"]
sys-locale = ["dep:sys-locale", "std"]
match = []

[dependencies]
tap = "1.0"
phf = { version = "0.11", optional = true, default-features = false }
tinystr = { version = "0.8", optional = true, default-features = false }
unic-langid = { version = "0.9", features = ["likelysubtags"] }
sys-locale = { version = "0.3", optional = true }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# sys-locale = { version = "0.3.0", optional = true, features = ["js"] }
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[dev-dependencies]
anyhow = "1.0.96"
compact_str = { version = "0.8.1", features = ["serde"] }
# compact_str = { version = "0.8", optional = true, default-features = false }
itertools = "0.14"
phf_codegen = "0.11"
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0.139"
shlex = "1.3"

# [build-dependencies]
# phf_codegen = "0.11"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "__unstable_doc"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(__unstable_doc)'] }
