[package]
name = "lang-id"
version = "0.0.14"
edition = "2024"
rust-version = "1.85"
license = "MIT/Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
categories = ["internationalization", "localization"]
readme = "docs/Readme.md"
repository = "https://github.com/2moe/lang-id"
description = "Const lang-ids and maps are provided, mainly for i18n and l10n."
exclude = [
    "/rust-toolchain.toml",
    "/.github/",
    # "/examples/",
    # "/tests/",
]

[features]
default = ["match"]
std = []
consts = []
compact_str = ["dep:compact_str"]
map = ["dep:phf", "compact_str", "consts"]
sys-locale = ["dep:sys-locale", "std", "consts"]
nostd-sys-locale = [
    "compact_str",
    "dep:libc",
    # Windows
    "dep:widestring",
    "dep:windows-sys",
]
match = ["consts"]
serde = ["unic-langid/serde", "compact_str?/serde"]

[dependencies]
tap = "1.0"
phf = { version = "0.11", optional = true, default-features = false }
tinystr = { version = "0.8", default-features = false }
unic-langid = { version = "0.9", features = ["likelysubtags"] }
compact_str = { version = "0.9", optional = true, default-features = false }
libc = { version = "0.2", optional = true, default-features = false }
sys-locale = { version = "0.3", optional = true, features = [] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
sys-locale = { version = "0.3", optional = true, features = ["js"] }

[target.'cfg(windows)'.dependencies]
widestring = { version = "1.2.0", default-features = false, optional = true, features = [
    "alloc",
] }
windows-sys = { version = "0.59", default-features = false, optional = true, features = [
    "Win32_Globalization",
] }

[dev-dependencies]
anyhow = "1.0"
itertools = "0.14"
phf_codegen = "0.11"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
shlex = "1.3"
testutils = "0.0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "__unstable_doc"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(__unstable_doc)'] }
